Fix white space break-word issue.

--- a/src/components/TextArea/index.less
+++ b/src/components/TextArea/index.less
@@ -14,6 +14,7 @@
     overflow-wrap: break-word;
     box-sizing: border-box;
     padding: 0;
+    margin: 10px;
     font-size: 14px;
     line-height: 18px;
     font-variant-ligatures: common-ligatures;
@@ -35,9 +36,10 @@
       text-rendering: inherit;
       text-transform: inherit;
       white-space: inherit;
-      word-break: inherit;
       overflow-wrap: inherit;
-      padding: 10px;
+      word-break: inherit;
+      word-break: normal;
+      padding: 0;
     }
     &-pre {
       position: relative;
